--- a/webthings-talk/devices/templates/xtalk/index.html
+++ b/webthings-talk/devices/templates/xtalk/index.html
@@ -88,29 +88,51 @@
               <button id="connect_native_device_button" type="submit" class="btn btn-primary btn-sm" formaction="/connect-native-device">Add</button>
             </div>
           </div>
-          
-          {% if temp_device.connected %}
-            <div class="row mb-2 align-items-center" id="device_name_block">
-              <label class="col-sm-3">Device Name</label>
-              <div class="col-sm-6">{{ temp_device.device_name }}</div>
-            </div>
-          {% endif %}
-        {% else %}
-          <div class="row mb-2 align-items-center" id="token_block" style="display:none">
-            <label class="col-sm-3">Gateway Token</label>
-            <div class="col-sm-6">{{ form.token }}</div>
-            <div class="col-sm-2"><button id="check_gateway_button" type="submit" class="btn btn-primary btn-sm" formaction="/connect-gateway" disabled>Connect</button></div>
+        {% elif temp_device.device_base == 'gateway' %}
+          <div class="row mb-2 align-items-center" id="gateway_type_block">
+            <label class="col-sm-3">Gateway Type</label>
+            <div class="col-sm-6">{{ form.gateway_type }}</div>
           </div>
 
-          {% if temp_device.type == "gateway" and temp_device.connected_gateway %}
+          <div class="row mb-2 align-items-center" id="gateway_url_block">
+            <div class="col-sm-6 offset-sm-3"><a href="{{ temp_device.gateway_url }}" target="_blank">Click here to open gateway.</a></div>
+          </div>
+
+          <div class="mb-2 align-items-center" id="custom_gateway_block" style="display:none">
+            <div class="row mb-1">
+              <label class="col-sm-3">Gateway Info</label>
+              <div class="col-sm-6">{{ form.custom_gateway_url }}</div>
+            </div>
+            <div class="row">
+              <div class="col-sm-3 offset-sm-3">{{ form.custom_gateway_username }}</div>
+              <div class="col-sm-3">{{ form.custom_gateway_password }}</div>
+              <div class="col-sm-2">
+                <button id="connect_custom_gateway_button" type="submit" class="btn btn-primary btn-sm" formaction="/connect-gateway">Connect</button>
+              </div>  
+            </div>
+          </div>
+
+          <div class="row mb-2 align-items-center" id="gateway_device_list_block">
+            <label class="col-sm-3">Gateway Device</label>
+            <div class="col-sm-6">{{ form.gateway_device_list }}</div>
+          </div>
+
+          {% comment %} {% if temp_device.type == "gateway" and temp_device.connected_gateway %}
             <div class="row mb-2 align-items-center">
               <label class="col-sm-3">Gateway Device</label>
               <div class="col-sm-6">{{ form.select_device }}</div>
               <div class="col-sm-2"><button id="check_button" type="submit" class="btn btn-primary btn-sm" formaction="/check-gateway-device">Connect</button></div>
             </div>
-          {% endif %}
+          {% endif %} {% endcomment %}
         {% endif %}
-        
+
+        {% if temp_device.connected %}
+          <div class="row mb-2 align-items-center" id="device_name_block">
+            <label class="col-sm-3">Device Name</label>
+            <div class="col-sm-6">{{ temp_device.device_name }}</div>
+          </div>
+        {% endif %}
+
         {% if temp_device.properties|length > 0 %}
           <div class="mb-2">
             <label class="content-title">Device Feature</label>
@@ -180,6 +202,26 @@
     form.submit();
   }
 
+  function showGatewayUrlBlock() {
+    const gatewayUrlBlock = document.getElementById("gateway_url_block");
+    gatewayUrlBlock.style.display="";
+  }
+
+  function hiddenGatewayUrlBlock() {
+    const gatewayUrlBlock = document.getElementById("gateway_url_block");
+    gatewayUrlBlock.style.display="none";
+  }
+
+  function showCustomGatewayBlock() {
+    const customGatewayBlock = document.getElementById("custom_gateway_block");
+    customGatewayBlock.style.display="";
+  }
+
+  function hiddenCustomGatewayBlock() {
+    const customGatewayBlock = document.getElementById("custom_gateway_block");
+    customGatewayBlock.style.display="none";
+  }
+
   function checkNativeUrlListAdd() {
     const nativeUrlList = document.getElementById("id_native_url_list");
     if (nativeUrlList.options[nativeUrlList.selectedIndex].value == "add") {
@@ -195,16 +237,33 @@
   function checkNativeUrlListDelete() {
     const nativeUrlList = document.getElementById("id_native_url_list");
     const optionValue = nativeUrlList.options[nativeUrlList.selectedIndex].value;
-    if (optionValue != "add" && optionValue != '') {
+    if (optionValue != "add" && optionValue != "") {
       showDeleteNativeDeviceUrlButton();
     } else {
       hiddenDeleteNativeDeviceUrlButton();
     }
   }
 
+  function checkGatewayType() {
+    const gatewayType = document.getElementById("id_gateway_type");
+    const optionValue = gatewayType.options[gatewayType.selectedIndex].value;
+    if (optionValue == "default") {
+      showGatewayUrlBlock();
+      hiddenCustomGatewayBlock()
+    } else {
+      hiddenGatewayUrlBlock();
+      showCustomGatewayBlock();
+    }
+  }
+
   function init() {
-    checkNativeUrlListDelete();
-    document.getElementById("id_native_url_list").addEventListener("change", checkNativeUrlListAdd);    
+    const deviceBase = document.getElementById("id_device_base");
+    if (deviceBase.options[deviceBase.selectedIndex].value == "native") {
+      checkNativeUrlListDelete();
+      document.getElementById("id_native_url_list").addEventListener("change", checkNativeUrlListAdd);
+    } else if (deviceBase.options[deviceBase.selectedIndex].value == "gateway") {
+      document.getElementById("id_gateway_type").addEventListener("change", checkGatewayType);
+    }
   }
 
   window.onload = init;
