--- a/webthings-talk/devices/templates/xtalk/index.html
+++ b/webthings-talk/devices/templates/xtalk/index.html
@@ -94,7 +94,7 @@
             <div class="col-sm-6">{{ form.gateway_type }}</div>
           </div>
 
-          <div class="row align-items-center" id="gateway_url_block">
+          <div class="row mb-2 align-items-center" id="gateway_url_block">
             <div class="col-sm-6 offset-sm-3"><a href="{{ temp_device.gateway_url }}" target="_blank">Click here to open gateway.</a></div>
           </div>
 
