--- a/webthings-talk/devices/templates/xtalk/index.html
+++ b/webthings-talk/devices/templates/xtalk/index.html
@@ -144,7 +144,7 @@
 
         {% if temp_device.properties|length > 0 %}
           <div class="mb-2">
-            <label class="content-title">Device Feature</label>
+            <label class="content-title">Device Features</label>
             <table class="manage-info-container">
               <thead>
                 <td style="width: 30%;">Name</td>
